<resources>
    <string name="app_name">TiMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TiMe</string>
    <string name="nav_header_subtitle">Keep track of my time!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">A button</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_add_category">Add a category</string>
    <string name="menu_settings">Settings</string>
    <string name="image_description">TODO</string>
    <string name="timer_item_goal">Goal: 140 h</string>
    <string name="timer_item_name">The Best Course</string>
    <string name="item_hours_value">40 h 30 m</string>
    <string name="timer_item_categories">The Best Category</string>
    <string name="create_button">Create</string>
    <string name="create_timer_goal_hint">Goal in hours</string>
    <string name="create_timer_name_hint">Name of new timer</string>
    <string name="item_button_text_start">Start</string>
    <string name="message_positive_goal">Please define a positive goal</string>
    <string name="item_button_text_stop">Pause</string>
    <string name="item_button_start_desc">Start timer.</string>
    <string name="item_button_stop_desc">Stop timer</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="category">Category</string>
    <string name="create_category_name">Category name</string>
    <string name="message_name_category">Please enter a category name</string>
    <string name="save_changes_button">Save changes</string>
    <string name="delete_button">Delete</string>
    <string name="create_new_timer">Create New Timer</string>
    <string name="create_a_new_timer">Create A New Timer!</string>
    <string name="edit_timer">Edit Timer</string>
    <string name="start_timer">Start Timer</string>
    <string name="channel_name">timerNotification</string>
    <string name="channel_description">timerNotification</string>
</resources>