<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kth.id2216.group3.time.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.kth.id2216.group3.time.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <activity
        android:id="@+id/nav_settings"
        android:name="com.kth.id2216.group3.time.SettingsActivity"
        android:label="@string/menu_settings"
        tools:layout="@layout/activity_settings" />
    <fragment
        android:id="@+id/createTimer"
        android:name="com.kth.id2216.group3.time.ui.createtimer.CreateTimerFragment"
        android:label="Create Timer"
        tools:layout="@layout/fragment_create_timer" />

    <fragment
        android:id="@+id/createCategory"
        android:name="com.kth.id2216.group3.time.ui.createcategory.CreateCategoryFragment"
        android:label="Create Category"
        tools:layout="@layout/fragment_create_category" />

    <fragment
        android:id="@+id/editCategory"
        android:name="com.kth.id2216.group3.time.ui.editCategory.EditCategoryFragment"
        android:label="Edit Category"
        tools:layout="@layout/fragment_edit_category" >
        <argument
            android:name="categoryId"
            app:argType="integer"
            android:defaultValue="0"/>
    </fragment>

    <activity
        android:id="@+id/timerActivity"
        android:name="com.kth.id2216.group3.time.TimerActivity"
        android:label="Timer"
        tools:layout="@layout/activity_timer" />

    <fragment
        android:id="@+id/editTimer"
        android:name="com.kth.id2216.group3.time.ui.editTimer.EditTimerFragment"
        android:label="Edit Timer"
        tools:layout="@layout/fragment_edit_timer" />


</navigation>