<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editCategory.EditCategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/create_category_name"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="9dp"
            android:hint="@string/create_category_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/edit_category_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/edit_category_button"
            android:layout_width="252dp"
            android:layout_height="47dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorPrimary"
            android:gravity="center|center_vertical"
            android:text="@string/save_changes_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_category_name" />

        <Button
            android:id="@+id/delete_category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWarning"
            android:gravity="end"
            android:text="@string/delete_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.913"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_category_button"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>